src/test/ui/parser/keyword-try-as-identifier-edition2018.rs
// compile-flags: --edition 2018

fn main() {
    let try = "foo"; //~ error: expected pattern, found reserved keyword `try`
}
